@@ -1,4 +1,10 @@
-<h1>Welcome to Assembly!</h1>
+<h1>Bot assembly page</h1>
+
+<p>This page will provide you options to design your bot.
+  <div> 
+      Players can choose the three pieces to make a completed
+      bot with. Don't forget to click on "assemble" after your choice </div>
+<br/>
 <form method="post" action="/assembly/assemble">
 
     {headparts}
