@@ -1,6 +1,12 @@
 
 	<h1>Dashboard</h1>
-
+        <p> Welcome to &copy yberbot for all of your cyberbot gaming needs.</p>
+        <div>  This page will show you the overall game status
+            and a summary of the series' bot pieces. </div>
+        
+        <div> Clicking on the hyper-link will take you to that specific players.
+            portfolio</div>
+        <br/>
             {status}
         
             <br>
