@@ -1,3 +1,12 @@
-	<h1>Welcome to portfolio!</h1>
+	<h1>Players portfolio page</h1>
+        
+        <p> This page shows the recent trading activity and current
+            holdings for a specific player.</p>
+        
+        <div> Please use the drop-down menu to view portfolios.</div>
+        
+        <br/>
         {playerportfolio}
         {dropdown}
+        
+        
