@@ -6,11 +6,14 @@
         <link rel="stylesheet" type="text/css" media="all" href="css/style.css" />
     </head>
     <body>
-        <div id="wrapper">
-            <div id="header">
-                <span class="myhead"><img src="../../assets/Robots.jpg" alt="Robot" style="width:100%;height:176px;"></img></span>
-                <span class="mynav">
+          <span class="myhead"><img src="../../assets/Robots.jpg" alt="Robot" style="width:100%;height:176px;"></img></span>
+        <nav>
+           
+                   <a href="#" class="nav-toggle-btn"> <img src="../../assets/click.jpg" alt="Robot" style="width:50px;height:50px;"></img></a>
+             
                     <ul>
+                        
+                        <h2> Dashboard </h2>
                         <li><a href="/">Home</a></li>
                         <li><a href="/portfolio">Portfolio</a></li>
                         <li><a href="/assembly">Assembly</a></li>
@@ -23,15 +26,34 @@
                             <input type="submit" value="Logout">
                         </form></li>
                     </ul>
-                </span>
-            </div>
-            <div class="alone"></div>
+        </nav>
+           
+            
             <div id="content">
                 {content}
             </div>
-            <div id="footer" class="span12">
+            <div id="footer">
                 Copyright &copy; 2016 | Ramon Dhami, Victor Van, Sivan Alkalay and Mark Khauv
             </div>
-        </div>
+          
+           <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script type="text/javascript">
+        
+        (function() {
+            
+            var bodyEl = $('body'),
+                navToggleBtn = bodyEl.find('.nav-toggle-btn');
+            
+            navToggleBtn.on('click', function(e) {
+                bodyEl.toggleClass('active-nav');
+                e.preventDefault();
+            });
+            
+            
+            
+        })();
+        
+        
+    </script>
     </body>
 </html>
