@@ -7,25 +7,67 @@ and open the template in the editor.
     Created on : 11-Feb-2016, 12:18:29 PM
     Author     : sivanalkalay
 */
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-}
-
-li {
-    float: left;
-}
-
-li a {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
+ * {
+                margin: 0;
+                padding: 0;
+            }
+            
+            body {
+                font-family: Open Sans, Arial, sans-serif;
+                overflow-x: hidden;
+            }
+            
+            h2 {
+                
+                text-align: center;
+                color:white;
+                padding-bottom: 20px
+            }
+            nav {
+                position: fixed;
+                z-index: 1000;
+                top: 0;
+                bottom: 0;
+                width: 155px;
+                background-color: #036;
+                transform: translate3d(-155px, 0, 0);
+                transition: transform 0.4s ease;
+            }
+            .active-nav nav {
+                transform: translate3d(0, 0, 0);
+            }
+            nav ul {
+                list-style: none;
+                margin-top: 100px;
+            }
+            nav ul li a {
+                text-decoration: none;
+                display: block;
+                text-align: center;
+                color: #fff;
+                padding: 10px 0;
+            }
+            
+            .nav-toggle-btn {
+                display: block;
+                position: absolute;
+                left: 155px;
+                width: 40px;
+                height: 40px;
+                background-color: white;
+            }
+            
+            #content {
+                padding-top: 50px;
+                height: 800px;
+                background-color: #ccf;
+                text-align: center;
+                transition: transform 0.4s ease;
+            }
+            .active-nav #content {
+                transform: translate3d(155px, 0, 0);
+            }
+            
 
 li a:hover {
     background-color: #111;
@@ -33,7 +75,7 @@ li a:hover {
 
 
 #gameStatus {
-    border: 1px solid black;
+    border: 2px solid black;
     width:49%;
     float: left;
     
@@ -41,18 +83,26 @@ li a:hover {
 
 
 #players {
-    border: 1px solid black;
+    border: 2px solid black;
     width:49%;
     float: right;
         
 }
 
+#player-portfolio{
+ 
+ padding-right: 200px;
+      border: 2px solid black;
+      width:300px;
+      margin:0 auto;
+}
 
 #footer {
    position:fixed;
    bottom:0;
    width:100%;
-   height:60px;
+   height:20px;
    color: white;
-   background:#333;
+   background:#036;
+
 }
